fix(style): remove horizontal scrollbar
Refs: #21

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -541,3 +541,8 @@ a:hover {
     content: '▼ ';
     zoom: 0.9;
 }
+
+.ht_master .wtHolder {
+    overflow-y: auto !important;
+    overflow-x: hidden !important;
+}
